# ova

./: .env.example  .env.kokoro.example  .env.qwen3.example  .gitignore  CHANGELOG.md  LICENSE  MCP.md  QUICKSTART.md  README.md  SECURITY.md  TOOLS.md  VARIABLES.md  index.html  ova.sh  pyproject.toml
ova/: api.py  asr_server.py  audio.py  duplex.py  events.py  frames.py  mcp_client.py  pipeline.py  prosody.py  server_vad.py  turn_taking.py  utils.py
ova/llm/: __init__.py  base.py  factory.py  ollama_provider.py  openai_provider.py
ova/tools/: __init__.py  _base.py  get_datetime.py  timer.py  web_search.py
patches/: apply-qwen-asr-patch.sh
prompts/de/: default.txt
prompts/en/: default.txt
prompts/es/: default.txt
prompts/fr/: default.txt
prompts/it/: default.txt
prompts/ja/: default.txt
prompts/ko/: default.txt
prompts/pt/: default.txt
prompts/ru/: default.txt
prompts/zh/: default.txt
scripts/: README.md  configure_cuda.py  enhance_profile_audio.py  enhance_profile_audio_RE-USE.py  generate_voice_prompts.py  profile_pipeline.py
static/: README.md
static/css/: animations.css  base.css  components.css
static/js/: app.js  audio.js  config.js  duplex.js  events.js  notifications.js  pcm-processor.js  settings.js  theme.js  ui.js  vad.js  wakeword.js
static/themes/dark/: theme.css
static/themes/hal-9000/: theme.css
static/themes/her/: theme.css
static/themes/light/: theme.css
